--- a/README.Rmd
+++ b/README.Rmd
@@ -98,7 +98,7 @@ Cube STAC web service. The `get_request` method makes a HTTP GET connection
 to it and retrieves a STAC Catalog document from the server. Each `links` 
 entry is an available collection that can be accessed via STAC API.
 
-In the code below, we get some STAC items of `CB4_64_16D_STK-1` collection that
+In the code below, we get some STAC items of `CB4-16D-2` collection that
 intersects the bounding box passed to the `bbox` parameter. To do this, we
 call the `stac_search` function that implements the STAC `/search` 
 endpoint. The returned document is a STAC Item Collection (a geojson 
@@ -107,7 +107,7 @@ containing a feature collection).
 ```{R bdc-items1, echo=TRUE}
 
 it_obj <- s_obj |>
-  stac_search(collections = "CB4_64_16D_STK-1",
+  stac_search(collections = "CB4-16D-2",
               bbox = c(-47.02148, -17.35063, -42.53906, -12.98314),
               limit = 100) |> 
   get_request()
@@ -122,7 +122,7 @@ an example of how to pass a parameter token on a HTTP request.
 
 ```{R bdc-items2, eval=FALSE}
 it_obj <- s_obj |>
-  stac_search(collections = "CB4_64_16D_STK-1",
+  stac_search(collections = "CB4-16D-2",
               bbox = c(-47.02148, -17.35063, -42.53906, -12.98314)) |>
   get_request(add_headers("x-api-key" = "MY-TOKEN"))
 ```
